@@ -21,6 +21,7 @@ Version 1.3.12+svn:
   * Multiplayer
     * Revised maps: Hamlets
     * Recruitment OOS is fatal now.
+    * The next scenario now properly loads the recall list.
 
   * Sound and music
     * New or improved sounds: ogre hit and die, multiplayer chat.
